--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div class="container" class="bg-dark">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center" style = "background: url(background3.jpg)">
+      <div class="col-md-12 jumbotron text-center" style = "background: url(background.jpg)">
         <h1 style="color:rgb(255, 0, 191)"> Belly Button Biodiversity Dashboard</h1>
         <p style="color:rgb(221, 117, 20)">Use the interactive charts below to explore the dataset</p>
       </div>
